# kbundle-python

./: .gitignore  Bundle.py  Manifest.py  README.rst  bundle.py  kbundle.py  kpp-update-name.py  main.py  manifest.py  pyproject.toml
src/kbundle/: __init__.py  __main__.py  bundle.py  manifest.py
