[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kbundle"
version = "0.0.1"
authors = [{ name="Quytelda Kahja", email="dev@tamalin.org" }]
description = "Python tools for managing Krita resource bundles"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
	    "Programming Language :: Python :: 3",
	    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://invent.kde.org/quytelda/kbundle"
"Bug Tracker" = "https://invent.kde.org/quytelda/kbundle/issues"

[project.scripts]
kbundle = "kbundle:main"
